[gd_scene load_steps=4 format=3 uid="uid://bgll4a52be7j0"]

[ext_resource type="Script" uid="uid://553ocgtpqeqj" path="res://pause_menu.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://cpnkhjjc55psl" path="res://asset/button/Settings Menu/Resume Button.png" id="2_resume_tex"]
[ext_resource type="Texture2D" uid="uid://bijl8uthfsrdc" path="res://asset/button/Exit Button.png" id="3_exit_tex"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
layer = 700
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="PopupPanel" type="PopupPanel" parent="Background"]
size = Vector2i(10, 10)

[node name="MenuContainer" type="VBoxContainer" parent="Background/PopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PauseLabel" type="Label" parent="Background/PopupPanel/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="RowCenter" type="CenterContainer" parent="Background/PopupPanel/MenuContainer"]
layout_mode = 2

[node name="ButtonsSplit" type="HBoxContainer" parent="Background/PopupPanel/MenuContainer/RowCenter"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LeftCenter" type="CenterContainer" parent="Background/PopupPanel/MenuContainer/RowCenter/ButtonsSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResumeButton" type="TextureButton" parent="Background/PopupPanel/MenuContainer/RowCenter/ButtonsSplit/LeftCenter"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
texture_normal = ExtResource("2_resume_tex")
stretch_mode = 0

[node name="RightCenter" type="CenterContainer" parent="Background/PopupPanel/MenuContainer/RowCenter/ButtonsSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExitButton" type="TextureButton" parent="Background/PopupPanel/MenuContainer/RowCenter/ButtonsSplit/RightCenter"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
texture_normal = ExtResource("3_exit_tex")
stretch_mode = 0
